@@ -10,3 +10,5 @@ gem 'daemons'
 gem 'jellog', '>=1.0.14' # for logging
 gem 'jeckyl', '>=0.2.7' # for config files
 gem 'jeni', '>=0.2.5' # for installation
+
+gem 'optplus', '>=0.0.2'
