@@ -1,13 +1,14 @@
 # Created by Jevoom
 #
-# 29-Aug-2013
-#   Fix minor error in runscript (status)
+# 03-Sep-2013
+#   Introduce Optplus version of the bin/jerbil command and add a couple of information
+#   methods to the server in support.
 
 module Jerbil
-  # version set to 1.3.1
-  Version = '1.3.1'
-  # date set to 29-Aug-2013
-  Version_Date = '29-Aug-2013'
-  #ident string set to: jerbil-1.3.1 29-Aug-2013
-  Ident = 'jerbil-1.3.1 29-Aug-2013'
+  # version set to 1.3.2
+  Version = '1.3.2'
+  # date set to 03-Sep-2013
+  Version_Date = '03-Sep-2013'
+  #ident string set to: jerbil-1.3.2 03-Sep-2013
+  Ident = 'jerbil-1.3.2 03-Sep-2013'
 end
